Fix error displaying search icon in collapse state

--- a/src/app/components/side-bar/side-bar.component.css
+++ b/src/app/components/side-bar/side-bar.component.css
@@ -22,9 +22,11 @@
   margin: 0.3rem auto;
 }
 .side-bar-component .side-bar-search-box .side-bar-menu-item,
-.side-bar-component .side-bar-search-box.collapsed .search-control {
+.side-bar-component .side-bar-search-box.collapsed .search-control,
+.side-bar-component .side-bar-search-box.collapsed .search-icon {
   display: none;
 }
+.side-bar-component .side-bar-search-box .search-icon,
 .side-bar-component .side-bar-search-box .search-control,
 .side-bar-component .side-bar-search-box.collapsed .side-bar-menu-item {
   display: block;
